feat: ingredients list
