# server/api/types.py
@@ -23,13 +23,12 @@ class RecipeIngredient(BaseModel):
     codified_ingredient: str
     quantity_g: Optional[float] = None
 
+class TaxonomyItem(BaseModel):
+    id: Annotated[str, Field(description="Taxonomy id of the item")]
+    label: Annotated[str, Field(description="Name of the item")]
 
-class Origin(BaseModel):
+class Origin(TaxonomyItem):
     """Origin model for Score My Recipe API"""
-
-    id: Annotated[str, Field(description="Taxonomy id of the origin")]
-    label: Annotated[str, Field(description="Name of the origin")]
-
 
 class RecipeParseResponse(BaseModel):
     """Response model for parse_text endpoint"""
@@ -59,11 +58,8 @@ class OriginsResponse(BaseModel):
     origins: list[Origin]
 
 
-class Label(BaseModel):
+class Label(TaxonomyItem):
     """Label model for Score My Recipe API"""
-
-    id: Annotated[str, Field(description="Taxonomy id of the label")]
-    label: Annotated[str, Field(description="Name of the label")]
 
 
 class LabelsRequest(LangRequest):
@@ -74,3 +70,17 @@ class LabelsResponse(BaseModel):
     """Response model for get_labels endpoint"""
 
     labels: list[Label]
+
+
+class Ingredient(TaxonomyItem):
+    """Ingredient model for Score My Recipe API"""
+
+
+class IngredientsRequest(LangRequest):
+    pass
+
+
+class IngredientsResponse(BaseModel):
+    """Response model for get_ingredients endpoint"""
+
+    ingredients: list[Ingredient]
